style.css
* {
    box-sizing: border-box;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

body {
    margin: 0;
}

.full-width {
    padding-left: 20px;
    padding-right: 20px;
    max-width: 840px;
    min-width: 340px;
}

.top-bar {
    overflow: hidden;
    background-image: linear-gradient(to right, #000000, #2c0c21);
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.content {
    padding-top: 20px;
    margin: auto;
}

.button {
    background-color: #270f26;
    border-radius: 5px;
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    margin: 4px 2px;
    cursor: pointer;
}

.button:hover {
    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

.card {
    display: flex;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    transition: 0.3s;
    border-radius: 5px;

    text-decoration: none;
    outline-color: transparent;
    color: #000000;
}

.card:hover {
    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

.card>img {
    flex: 1;
    background-color: rgb(51, 11, 41);
    width: 50%;
    border-radius: 5px 0px 0px 5px;
}

.card>div {
    flex: 1;
    padding: 2px 16px;
    display: flex;
    flex-direction: column;
}

.card>div>.description {
    margin-bottom: auto;

}

.card>div>.start {
    text-align: right;
    text-decoration: underline;
}

.title-card {
    display: flex;
    border-radius: 5px;
    background-color: rgb(224, 201, 222);
}

.content-card {
    display: flex;
    flex-direction: column;
    margin-top: 20px;
    padding: 10px;
    border-radius: 5px;
    border: #240024;
    border-style: solid;
    border-width: 1px;
}

.title-card>img {
    background-color: rgb(51, 11, 41);
    width: 15%;
    min-width: 100px;
    border-radius: 5px 0px 0px 5px;
}

.title-card>div {
    padding: 2px 16px;
    margin-top: auto;
    margin-bottom: auto;
}

.fig {
    border-radius: 5px;
    background-color: rgb(224, 201, 222);
    padding-top: 2px;
    padding-bottom: 2px;
}

table {
    margin-left: auto;
    margin-right: auto;
}

table,
th,
td {
    border: 1px solid white;
    border-collapse: collapse;
    width: 8%;
    text-align: center;
}

